src/Pgn.Compiler.GeneratedCode/PgnParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Ezequiel Demetras/Documents/Projetos/PgnConverter/src/Pgn.Compiler/Pgn.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Pgn.Compiler {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class PgnParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		EVENT=1, SITE=2, DATE=3, ROUND=4, WHITE=5, BLACK=6, WHITEELO=7, BLACKELO=8, 
		WHITETITLE=9, BLACKTITLE=10, RESULT=11, GAMEID=12, VARIANT=13, TIMECONTROL=14, 
		ECO=15, OPENING=16, TERMINATION=17, ANNOTATOR=18, LBRACE=19, RBRACE=20, 
		STRING_VALUE=21, ANALYSIS=22;
	public const int
		RULE_pgn_info = 0, RULE_info = 1, RULE_attrs = 2;
	public static readonly string[] ruleNames = {
		"pgn_info", "info", "attrs"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Event'", "'Site'", "'Date'", "'Round'", "'White'", "'Black'", 
		"'WhiteElo'", "'BlackElo'", "'WhiteTitle'", "'BlackTitle'", "'Result'", 
		"'GameId'", "'Variant'", "'TimeControl'", "'ECO'", "'Opening'", "'Termination'", 
		"'Annotator'", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "EVENT", "SITE", "DATE", "ROUND", "WHITE", "BLACK", "WHITEELO", 
		"BLACKELO", "WHITETITLE", "BLACKTITLE", "RESULT", "GAMEID", "VARIANT", 
		"TIMECONTROL", "ECO", "OPENING", "TERMINATION", "ANNOTATOR", "LBRACE", 
		"RBRACE", "STRING_VALUE", "ANALYSIS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Pgn.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PgnParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PgnParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PgnParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Pgn_infoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InfoContext[] info() {
			return GetRuleContexts<InfoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InfoContext info(int i) {
			return GetRuleContext<InfoContext>(i);
		}
		public Pgn_infoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pgn_info; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPgnListener typedListener = listener as IPgnListener;
			if (typedListener != null) typedListener.EnterPgn_info(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPgnListener typedListener = listener as IPgnListener;
			if (typedListener != null) typedListener.ExitPgn_info(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPgnVisitor<TResult> typedVisitor = visitor as IPgnVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPgn_info(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Pgn_infoContext pgn_info() {
		Pgn_infoContext _localctx = new Pgn_infoContext(Context, State);
		EnterRule(_localctx, 0, RULE_pgn_info);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 9;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LBRACE) {
				{
				{
				State = 6;
				info();
				}
				}
				State = 11;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InfoContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(PgnParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AttrsContext attrs() {
			return GetRuleContext<AttrsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_VALUE() { return GetToken(PgnParser.STRING_VALUE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(PgnParser.RBRACE, 0); }
		public InfoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_info; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPgnListener typedListener = listener as IPgnListener;
			if (typedListener != null) typedListener.EnterInfo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPgnListener typedListener = listener as IPgnListener;
			if (typedListener != null) typedListener.ExitInfo(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPgnVisitor<TResult> typedVisitor = visitor as IPgnVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInfo(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InfoContext info() {
		InfoContext _localctx = new InfoContext(Context, State);
		EnterRule(_localctx, 2, RULE_info);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 12;
			Match(LBRACE);
			State = 13;
			attrs();
			State = 14;
			Match(STRING_VALUE);
			State = 15;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AttrsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EVENT() { return GetToken(PgnParser.EVENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SITE() { return GetToken(PgnParser.SITE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DATE() { return GetToken(PgnParser.DATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ROUND() { return GetToken(PgnParser.ROUND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITE() { return GetToken(PgnParser.WHITE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLACK() { return GetToken(PgnParser.BLACK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITEELO() { return GetToken(PgnParser.WHITEELO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLACKELO() { return GetToken(PgnParser.BLACKELO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITETITLE() { return GetToken(PgnParser.WHITETITLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLACKTITLE() { return GetToken(PgnParser.BLACKTITLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RESULT() { return GetToken(PgnParser.RESULT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GAMEID() { return GetToken(PgnParser.GAMEID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIANT() { return GetToken(PgnParser.VARIANT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TIMECONTROL() { return GetToken(PgnParser.TIMECONTROL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ECO() { return GetToken(PgnParser.ECO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPENING() { return GetToken(PgnParser.OPENING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TERMINATION() { return GetToken(PgnParser.TERMINATION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ANNOTATOR() { return GetToken(PgnParser.ANNOTATOR, 0); }
		public AttrsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_attrs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPgnListener typedListener = listener as IPgnListener;
			if (typedListener != null) typedListener.EnterAttrs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPgnListener typedListener = listener as IPgnListener;
			if (typedListener != null) typedListener.ExitAttrs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPgnVisitor<TResult> typedVisitor = visitor as IPgnVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAttrs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AttrsContext attrs() {
		AttrsContext _localctx = new AttrsContext(Context, State);
		EnterRule(_localctx, 4, RULE_attrs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 17;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 524286L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
} // namespace Pgn.Compiler
